--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 :root {
   --primary-white: white;
   --page-bg-color: rgb(237, 237, 237);
+  --more-button-bg-color: rgba(237, 237, 237, 0.4);
+
+  --primary-border: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 div,
@@ -11,6 +14,14 @@ main,
 input,
 button {
   box-sizing: border-box;
+  font-weight: 300;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 400;
 }
 
 button {
@@ -22,6 +33,7 @@ button {
 }
 body {
   overflow: hidden;
+  font-weight: 300;
 }
 
 .App {
@@ -68,6 +80,7 @@ body {
 }
 
 .App .body {
+  position: relative;
   overflow: scroll;
   grid-area: thoughts;
   background-color: var(--page-bg-color);
@@ -133,6 +146,33 @@ svg.nav-bar-add {
   fill: green;
 }
 
+/* Scroll Button */
+.scroll-button {
+  position: fixed;
+  bottom: 80px;
+  right: 16px;
+  background-color: white;
+  border: var(--primary-border);
+  border-radius: 50px;
+  padding: 2px;
+  box-sizing: border-box;
+  width: 28px;
+  height: 28px;
+
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.scroll-button svg {
+  width: 22px;
+  height: 22px;
+  fill: grey;
+}
+
+.scroll-visible {
+  opacity: 1;
+}
+
 /* Settings  */
 .settings-page {
   background-color: var(--primary-white);
@@ -181,7 +221,7 @@ svg.nav-bar-add {
   margin: 16px 8px;
 
   display: grid;
-  grid-template-columns: 1fr 30px;
+  grid-template-columns: 1fr 36px;
   grid-row-gap: 4px;
   background-color: var(--primary-white);
 }
@@ -214,11 +254,12 @@ svg.nav-bar-add {
   border-radius: 50px;
   width: 28px;
   height: 28px;
-  background-color: var(--page-bg-color);
+  background-color: var(--more-button-bg-color);
 }
 
 .thought-box .more-button svg {
-  fill: gray;
+  fill: grey;
+  transform: rotate(90deg);
 }
 
 .thought-box .more-button,
@@ -226,7 +267,7 @@ svg.nav-bar-add {
   display: flex;
   justify-content: center;
   align-items: center;
-  justify-self: center;
+  justify-self: end;
 }
 
 .thought-box-title input {
