--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,7 @@ body {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
+.common-tag-add-row::-webkit-scrollbar,
 .common-threads-container ul::-webkit-scrollbar,
 .App .body::-webkit-scrollbar {
   display: none;
@@ -353,6 +354,17 @@ h3.thought-box-title {
   justify-content: center;
 }
 
+/* Draft Js Decorators Styles */
+.draft-decorator-hashtag-style {
+  color: rgba(95, 184, 138, 1);
+}
+
+.common-tag-add-row button {
+  margin: 0px 8px;
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+
 /* New Thought Page  */
 .new-thought-page {
   display: flex;
@@ -492,6 +504,7 @@ h3.thought-box-title {
   margin: 0px;
 }
 
+.common-tag-add-row,
 .common-threads-container ul {
   margin: 0px;
   padding: 0px;
